companies - name search option

--- a/src/main/webapp/manager/companies.html
+++ b/src/main/webapp/manager/companies.html
@@ -56,6 +56,12 @@
               </div>
           </div>
           <div class="clearfix">
+            <label for="name">Nome</label>
+            <div class="input">
+              <input type="text" id='name' name="name" placeholder="Contendo"/>
+            </div>
+          </div>            
+          <div class="clearfix">
             <label for="send"></label>
               <div class="input">
                   <button type="button" id="send" class="btn success">Buscar</button>
