companies profs number

--- a/src/main/webapp/manager/companies.html
+++ b/src/main/webapp/manager/companies.html
@@ -50,8 +50,9 @@
             </label>
               <div class="input">
                 <div class="inline-inputs">
-                  <input class="url_parameter" name="status" id='status' type='checkbox' />
-                  <span class="help-block">Mostrar empresas inativas</span>
+                  <input class="url_parameter" name="status" id='status' type='checkbox' /> Profs Ativos
+                  <input class="url_parameter" name="profs" id='profs' type='checkbox' />
+                  <span class="help-block">Mostrar empresas inativas / calcular qtos profissionais</span>
                 </div>
               </div>
           </div>
