--- a/src/main/webapp/user/terms.html
+++ b/src/main/webapp/user/terms.html
@@ -51,7 +51,13 @@
               </div>
             </div>
           </div>                       
-          </span>
+        </span>
+      <div class="well">
+        <label for="btn"></label>
+        <a class="btn primary" href="/user/list_terms">Lista</a>
+        <input class="btn success" type="submit" value="Salvar">
+        <a class="btn primary" href="/user/terms">Inserir novo</a>
+      </div>
     </form>
     <script>
     $(function(){
