terms user info

--- a/src/main/webapp/financial/commission_report.html
+++ b/src/main/webapp/financial/commission_report.html
@@ -182,7 +182,7 @@
             <label for="user"><span data-i18n='Profissional'></span></label>
               <div class="input">
                 <div class="inline-inputs">
-                    <select class='local_storage value_to_env' data-env-name="NOME_PROFISSIONAL" data-env-value='IDPROFISSIONAL' name="user" id="user"></select>
+                    <select class='local_storage value_to_env' data-env-value='USER' name="user" id="user"></select>
                 </div>
               </div>
           </div>
