--- a/src/main/webapp/user/terms.html
+++ b/src/main/webapp/user/terms.html
@@ -29,7 +29,9 @@
               <label for="name">Observação</label>
                <div class="input">
                   <input class="medium" id="obs" name="obs" size="30" type="text"/>
-                  <span class="help-block">Descrição do termo</span>
+                  <a data-original-title="Informação" data-content="clique para abrir a documentação" data-help-url='/docs/replacedata.html' rel="popover" class="_popover_basic _help">
+                  <img src="/images/info.gif" width="20">
+                  </a>
                </div>
             </div>
             <div>
