remember user / customer

--- a/src/main/webapp/v2/login.html
+++ b/src/main/webapp/v2/login.html
@@ -202,8 +202,8 @@
 
 										<div class="toolbar center">
 											<a href="#" onclick="show_box('login-box'); return false;" class="back-to-login-link">
+												<i class="icon-arrow-left"></i>
 												Voltar para o login
-												<i class="icon-arrow-right"></i>
 											</a>
 										</div>
 									</div><!-- /widget-body -->
