unit and offsale in command conference report 2

--- a/src/main/webapp/financial_cashier/comman_conference.html
+++ b/src/main/webapp/financial_cashier/comman_conference.html
@@ -54,7 +54,7 @@
                             <select class= 'url_parameter local_storage xlarge' id='offsale'  name="offsale"></select>
                           </div>
                           </span>
-                          <span class="help-block">Convênio no cadastro de <span data-i18n='Clientes'></span>, não no atendimento</span>
+                          <span class="help-block">Convênio no atendimento, não no cadastro de <span data-i18n='Clientes'></span></span>
                         </div>
                       </div>
                     </div>
