audit in T report

--- a/src/main/webapp/financial_cashier/comman_conference.html
+++ b/src/main/webapp/financial_cashier/comman_conference.html
@@ -240,7 +240,7 @@
         </td>
         <td>
           <div class="hide_on_print">
-            <f:audit></f:audit>
+            <f:auditstr></f:auditstr>
           </div>
         </td>
       </tr>
