--- a/src/main/webapp/treatments_conferenc.html
+++ b/src/main/webapp/treatments_conferenc.html
@@ -60,6 +60,7 @@
                   </div>
                 </div>
               </div>
+              <input type="hidden" class="has-audit-module lift:SecuritySnippet.hasAuditModule" value="1">
               <input type="hidden" class="has-unit-module lift:SecuritySnippet.hasUnitModule" value="1">
               <div class="clearfix lift:SecuritySnippet.hasUnitModule">
                 <label for="unit">Unidade</label>
