--- a/src/main/webapp/manager/index.html
+++ b/src/main/webapp/manager/index.html
@@ -82,6 +82,11 @@
            </a>
         </li>
         <li>
+           <a href="/financial_admin/company_reprocess.html" target="_blancccck" class="_popover" rel="popover" data-content="Reorganizar empresa" data-original-title="Reorganizar empresa">
+              <img width='32' src="/images/icon_company.png"/>
+           </a>
+        </li>
+        <li>
            <a href="/product_admin/product_reprocess.html" target="_blancccck" class="_popover" rel="popover" data-content="Reorganizar produtos/serviços" data-original-title="Reorganizar produtos/serviços">
               <img width='32' src="/images/palet03.png"/>
            </a>
