invoice module - service executor userstatus and is_employee

--- a/src/main/webapp/templates-hidden/financial.html
+++ b/src/main/webapp/templates-hidden/financial.html
@@ -200,7 +200,7 @@
                 <img width='32' src="/images/bills_to_pay.png"/>
               </a>
             </li>
-            <li class="lift:SecuritySnippet.isEdoctusSystem">
+            <li class="lift:SecuritySnippet.hasInvoiceModule">
              <a href="/financial/invoicing" class="_popover_basic" rel="popover" data-content="Faturamento" data-original-title="Faturamento">
                 <img width='32' src="/images/invoice.png"/>
               </a>
