all as confirmed and arrived

--- a/src/main/webapp/company_log/edit.html
+++ b/src/main/webapp/company_log/edit.html
@@ -277,10 +277,24 @@
 				            </div>
 			          	</div> 
 						<div class="clearfix lift:SecuritySnippet.hasUnitModule">
-				            <label for="calendarShowId">Mostra Dif Unidade</label>
+				            <label for="calendarShowDifUnit">Mostra Dif Unidade</label>
 				            <div class="input">
 				              <input id="calendarShowDifUnit" name='calendarShowDifUnit'>
 				              <span class="help-block">Mostra agendamentos de unidades diferentes da corrente?</span>
+				            </div>
+			          	</div> 
+						<div class="clearfix">
+				            <label for="calendarAllAsConfirmed">Todos no dia como confirmados</label>
+				            <div class="input">
+				              <input id="calendarAllAsConfirmed" name='calendarAllAsConfirmed'>
+				              <span class="help-block">Troca todos os atendimentos do cliente no dia para confirmado?</span>
+				            </div>
+			          	</div> 
+						<div class="clearfix">
+				            <label for="calendarAllAsArrived">Todos no dia como chegou</label>
+				            <div class="input">
+				              <input id="calendarAllAsArrived" name='calendarAllAsArrived'>
+				              <span class="help-block">Troca todos os atendimentos do cliente no dia para chegou?</span>
 				            </div>
 			          	</div> 
 						<div class="clearfix">
