xml tiss improvements

--- a/src/main/webapp/offsale/offsaleproduct.html
+++ b/src/main/webapp/offsale/offsaleproduct.html
@@ -61,6 +61,13 @@
                   <input  name="productTypeName" id="productTypeName"  size="30" type="text"/>    
                 </div>  
               </div>
+              <div class="clearfix">
+                <label for="external_id">Código</label>
+                <div class="input">
+                  <text class="xlarge" id="external_id" name="external_id" >
+                  </text>
+                </div>
+              </div>
             </span>
             <span class="span18">
               <div class="clearfix">
