--- a/src/main/webapp/customer/upload_migration_file.html
+++ b/src/main/webapp/customer/upload_migration_file.html
@@ -3,6 +3,7 @@
   	<center>Importar Planilha Gerar Sql</center>
   </h3>
   <form class="lift:UploadContacts?form=post;multipart=true">
+    <form  class="lift:form.ajax">
     <div class="clearfix">
       <label for="file">Arquivo</label>
       <div class="input">
@@ -40,5 +41,6 @@
       </div>
         </div>
     </div> 
+    </form>
   </form>
 </div>
