how to insert youtube videos into report center, docs/tutorial and docs/agenda

--- a/src/main/webapp/reports/center.html
+++ b/src/main/webapp/reports/center.html
@@ -411,6 +411,11 @@
               <img width='32' src="/images/generate.png"/>
            </a>
           </li>          
+        <li class="lift:SecuritySnippet.isSuperAdmin">
+          <a href="https://www.youtube.com/watch?v=LLLL7g7MyGs&t=64s" class="_popover" target="_blancccck" rel="popover" data-content="Relatório detalhado de comissão" data-original-title="Vídeo Vila Rika">
+            <img width='32' src="/images/next.png"/>
+          </a>
+        </li>
       </ul>    
     </span>
   </span>
