--- a/src/main/webapp/user/edit.html
+++ b/src/main/webapp/user/edit.html
@@ -290,6 +290,7 @@
                                 <label>Permissões</label>
                                 <select multiple="multiple" id="groupPermission" name="groupPermission">
                                     <option class="lift:SecuritySnippet.isSuperAdmin" value="1000">Super Admin</option>
+                                    <option class="lift:SecuritySnippet.isSupportAdmin" value="900">Suporte Admin</option>
                                     <option value="1">Administrador</option>
                                     <option class="lift:SecuritySnippet.isNotEgrexSystem" value="13">Clientes</option>
                                     <option class="lift:SecuritySnippet.isEgrexSystem" value="13">Membros</option>
