--- a/src/main/webapp/manager/companies.html
+++ b/src/main/webapp/manager/companies.html
@@ -66,7 +66,7 @@
             <label for="send"></label>
               <div class="input">
                   <button type="button" id="send" class="btn success">Buscar</button>
-                  <a class="btn primary" href="/security/useCompany?id=1" title="Selecionar VilarikA - Só para super Admin">VilarikA
+                  <a class="btn primary lift:SecuritySnippet.isSuperAdmin" href="/security/useCompany?id=1" title="Selecionar VilarikA - Só para super Admin">VilarikA
                   </a>
               </div>
           </div>
