--- a/src/main/webapp/financial/event_payroll_register.html
+++ b/src/main/webapp/financial/event_payroll_register.html
@@ -34,13 +34,13 @@
               <div class="clearfix">
                 <label for="user"><span data-i18n='Profissionais'></span></label>
                 <div class="input">
-                  <select name='user' class="user alow_all" id="user" multiple="multiple"></select>
+                  <select name='user' class="user alow_all local_storage" id="user" multiple="multiple"></select>
                 </div>
               </div>
               <div class="clearfix">
-                <label for="user">Verbas</label>
+                <label for="events_filter">Verbas</label>
                 <div class="input">
-                  <select name='events_filter' class="user alow_all" id="events_filter" multiple="multiple"></select>
+                  <select name='events_filter' class="user alow_all local_storage" id="events_filter" multiple="multiple"></select>
                 </div>
              </div>
             </div>
@@ -119,7 +119,7 @@
               <label for="event">Verba</label>
               <div class="input">
                 <div class="inline-inputs">
-                  <select id='event' class="notselect2 event url_parameter" name='event'></select>
+                  <select id='event' class="event url_parameter" name='event'></select>
                 </div>
               </div>
             </div>
@@ -155,14 +155,14 @@
               <div class="input">
                 <div class="input-prepend">
                   <span class="add-on"><img src="/images/dre.png" width="16"></span>
-                  <input class="mini currency url_parameter" id="value" name="value" size="30" type="text"/>
+                  <input class="mini currency url_parameter" id="value" name="value" size="30" type="text" value="0"/>
                 </div>
               </div>
             </div>
             <div class="clearfix">
               <label for="price">Quantidade</label>
               <div class="input">
-                <input class="mini url_parameter" id="qtd" name="qtd" size="30" type="number"/>
+                <input class="mini url_parameter" id="qtd" name="qtd" size="30" type="number" value="1"/>
               </div>
             </div>
             <div class="well">
