speech - in the beginning

--- a/src/main/webapp/reports/center.html
+++ b/src/main/webapp/reports/center.html
@@ -416,6 +416,11 @@
             <img width='32' src="/images/next.png"/>
           </a>
         </li>
+        <li class="lift:SecuritySnippet.isSuperAdmin">
+          <a href="/records/speech.html" class="_popover" target="_blancccck" rel="popover" data-content="Reconhece voz" data-original-title="Reconhece Voz">
+            <img width='32' src="/images/commision_payment.png"/>
+          </a>
+        </li>
       </ul>    
     </span>
   </span>
