--- a/src/main/webapp/records/speech.html
+++ b/src/main/webapp/records/speech.html
@@ -84,7 +84,7 @@ top: 190px;
 	</style>
 </head>
 <body>
-		<p id="ola">Olá tableless, você falou:</p>
+		<p id="ola">Olá, você falou:</p>
 		<div id="transcription"></div>
  
 		<button id="rect">Gravar</button>
